backend/crates/pagination/tests/ui/cursor_encode_no_serialize.rs
use pagination::Cursor;

struct NotSerialisable {
    value: u32,
}

fn main() {
    let cursor = Cursor::new(NotSerialisable { value: 42 });
    // encode() requires Key: Serialize — must be rejected by rustc
    let _ = cursor.encode();
}
